test: update api to graph database
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>